--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+  font-family: 'Outfit', serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
+}
+
 body{
     background : hsl(212, 45%, 89%);
     font-family:'Outfit';
@@ -12,38 +23,47 @@ body{
 }
 
 #card{
-    background: white;
+    background: hsl(0, 0%, 100%);
     border-radius: 20px;
     width: 320px;
-    padding: 16px;
+    height: 499px;
+    padding: 16px 16px 40px 16px;
     box-shadow: 1px black;
 }
 
 #qr-code{
     border-radius: 20px;
+    margin-bottom: 24px;
 }
 img{
     width: 100%;
-    text-align: center;
-    border-radius: 20px;
     display: block;
     margin: auto;
 }
 
 #text-container{
     text-align: center;
-    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 16px;
+    padding: 0 16px;
+    
 }
 
-h1{
-    font-weight: 700;
-    font-size: x-large;
+#text-title{
+    font-size: 22px;
+    font-weight: 700;                                                                                                                                                                                                                                                 
+    color: hsl(218, 44%, 22%);                                                                                     
 }
 
-p{
+#sub-text{
     font-weight: 400;
     color: grey;
-    font-size: small;
+    font-size: 15px;
+    text-align: center;
+    color: hsl(216, 15%, 48%);
 }
 
 @media only screen and (max-width: 375px){
